--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,12 +22,14 @@ set(SOURCES
     main.cpp
     controlpanel.cpp
     valueslistmodel.cpp
+    customenumslistmodel.cpp
     )
 
 set(HEADERS
     valuemaps.h
     controlpanel.h
     valueslistmodel.h
+    customenumslistmodel.h
     )
 
 set(DISTFILES
