moved valueObject to separate files, removed not needed icons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,14 @@ find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 
 set(SOURCES
     main.cpp
+    valueobject.cpp
     controlpanel.cpp
     valueslistmodel.cpp
     )
 
 set(HEADERS
     valuemaps.h
+    valueobject.h
     controlpanel.h
     valueslistmodel.h
     )
